the bug fixed in footer buttons on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10634,6 +10634,10 @@ section#contact form#contactForm :-ms-input-placeholder {
   .report-p{
     width: 90% !important;
   }
+  .btn-social{
+    height: 1rem;
+    width: 1rem;
+  }
 }
 
 .center{
